# delfos

./: .gitignore  Dockerfile  README.md  config.example.json  pyproject.toml
src/: main.py  tasks.py
src/clients/: external_client.py  s3_client.py
src/core/: celery_app.py  celeryconfig.py  config.py  logger.py  settings.py
src/domain/: delfos_pipeline.py  information_voids_score.py  models.py  trends_getter.py
src/domain/email_managers/: client.py  manager.py
src/domain/email_managers/sections/: footer.py  header.py  trends.py
src/nodes/: graph_state.py  news_scrapers.py  voids_nodes.py
src/nodes/prompts/: classify_news_prompt.yml  news_summarize_prompt_v1.yml
src/utils/: displayers.py  fake_data.py  llm_utils.py  prompt_getters.py
tests/: conftest.py  test_main.py
tests/clients/: test_external_client.py
tests/domain/: test_trends_getter.py
tests/nodes/: test_news_scrapers.py  test_voids_nodes.py
